Fix alignment issues

--- a/static/app.css
+++ b/static/app.css
@@ -4,6 +4,8 @@ body {
 
 #contents {
     padding: 10px;
+    max-width: 1500px;
+    margin: 0 auto;
 }
 
 #title {
@@ -26,12 +28,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 .photo {
     width: 20%;
-    height: 290px;
+    height: 280px;
     object-fit: cover;
 }
 
@@ -41,7 +43,7 @@ body {
     max-width: 500px;
     background-color: #eee;
     padding: 30px;
-    margin: 20px auto;
+    margin: 30px auto;
     border-radius: 4px;
 }
 
